--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "zendesk-support-api",
+  "name": "@nautilusdigital/zendesk",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "del ./build/*",
+    "build": "npm run clean && tsc",
+    "pub": "npm version patch && npm run build && npm publish"
   },
   "keywords": [],
   "author": "",
