--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@nautilusdigital/zendesk",
   "version": "1.0.3",
   "description": "",
-  "main": "Client.js",
-  "types": "./build/Client.d.ts",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
     "clean": "del ./build/*",
     "build": "tsc",
-    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish --access public"
+    "pub": "npm version patch && npm run build && npm publish --access public"
   },
   "keywords": [],
   "author": "",
