--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@nautilusdigital/zendesk",
   "version": "1.0.6",
   "description": "",
-  "main": "./build/Client.js",
-  "types": "./build/Client.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
     "build/**/*"
   ],
   "scripts": {
-    "clean": "del ./build/*",
     "build": "tsc",
     "pub": "npm version patch && npm run build && npm publish --access public"
   },
